[workspace]
members = [
    "kamino-litesvm",
    "pinocchio-accounts-struct",
    "pinocchio-token-interface",
    "spl-token-litesvm"
]
resolver = "2"

package.edition = "2021"
package.homepage = "https://exotechnologies.xyz"
package.repository = "https://github.com/exo-tech-xyz/solana-program-crates"
package.license = "MIT"

[workspace.dependencies]
bytemuck = "1.25.0"
fixed = "=1.30.0"
litesvm = "0.11.0"
pinocchio = "0.10.2"
pinocchio-token = "0.6.0"
pinocchio-token-2022 = "0.3.1"
pinocchio-associated-token-account = "0.4.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
sha2-const-stable = "0.1.0"
solana-account-view = "2.0"
solana-sdk = "3.0.0"
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
exo-spl-token-litesvm = { path = "./spl-token-litesvm", version = "0.1.0-rc.1" }
uint = "0.10.0"
