[package]
name = "exo-pinocchio-token-interface"
description = "Wrappers for Token and Token-2022 account interaction in Pinocchio Solana programs"
version = "0.1.0-rc.2"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
solana-account-view = { workspace = true }
spl-token-2022-interface = { workspace = true }
