[package]
name = "exo-spl-token-litesvm"
description = "Utilities for creating and managing SPL token accounts in LiteSVM test environments"
version = "0.1.0-rc.2"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
litesvm = { workspace = true }
solana-program-error = { workspace = true }
solana-program-pack = { workspace = true }
solana-sdk = { workspace = true }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-token-2022-interface = { workspace = true }
spl-type-length-value = { workspace = true }
